--- a/teste/style.css
+++ b/teste/style.css
@@ -1,97 +1,50 @@
+   
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Indie+Flower&display=swap');
 *{
-    margin: 0;
-    padding: 0;
-    font-family: arial;
-    color: #fff;
-}
-body{
-    width: 100vw;
-    height: 100vh;
-    background: #081b29;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-}
-::-webkit-input-placeholder{
-    color: #eee;
-}
-.wrapper{
-    position: relative;
-    width: 800px;
-    height: 65vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    border: 3px solid #00ffff;
-    box-shadow: 0 0 50px 0 #00a6bc;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.title{
-    font-size: 35px;
-}
-.inp{
-    padding-bottom: 10px;
-    border-bottom: 2px solid #eee;
-}
-.input{
-    border: none;
-    outline: none;
-    background: none;
-    width: 260px;
-    margin-top: 40px;
-    padding-right: 10px;
-    font-size: 17px;
-    color: #0ef;
+   margin: 0;
+   padding: 0;
+    box-sizing: border-box;
+ }
+
+body {
+  background: #111;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: 'Fredoka One', impact;
+
+  }
+
+h1 {
+  font-size: 70px;
+  color: rgb(200,200,210);
+  height: 100px;
+
+ }
+
+span {
+
+   position: relative;
+   top: 40px;
+   animation: move 0.5s ease-in-out infinite alternate;
+   animation-delay: calc(var(--i) * 0.15s);
+  }
+
+@keyframes move {
+
+ 100%{
+
+    top: -30px;
+    text-shadow: 0 3px red, 
+                 0 6px grey, 
+                 0 9px gold, 
+                 0 11px green, 
+                 0 13px purple, 
+                 0 14px cyan, 
+                 0 15px orangered;
 
 }
-.submit{
-    border: none;
-    outline: none;
-    width: 288px;
-    margin-top: 25px;
-    padding: 10px 0;
-    font-size: 20px;
-    border-radius: 40px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    background: linear-gradient(45deg, #0ef, #c800ff);
+
 }
-.footer{
-    margin-top: 30px;
-    letter-spacing: 0.5px;
-    font-size: 14px;
-}
-.link{
-    color: #0ef;
-    text-decoration: none;
-}
-.banner{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 450px;
-    height: 390px;
-    background: linear-gradient(to right,#0ef, #c800ff );
-    clip-path: polygon(0 0,100% 0,100% 100%, 60% 100%);
-    padding-right: 70px;
-    text-align: right;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-}
-.wel_text{
-    font-size: 40px;
-    margin-top: -50px;
-    line-height: 50px;
-}
-.para{
-    margin-top: 10px;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 1px;
-}
+                                       
